# SR_reactive_layer

./: CMakeLists.txt  Note for Adding Behavior.txt  README.md  settings.txt
src/: ActionRecognitionService_server.cpp  ActionRecognitionService_server.h  AgentFeedbackService_server.cpp  BB_Answer - James.cpp  BB_Answer - James.h  BB_Answer.cpp  BB_Answer.h  BB_AskToStop.cpp  BB_AskToStop.h  BB_Bored.cpp  BB_Bored.h  BB_Facebook.cpp  BB_Facebook.h  BB_Idle.cpp  BB_Idle.h  BB_Introduce.cpp  BB_Introduce.h  BB_LookAtPerson.cpp  BB_LookAtPerson.h  BB_LookAtPerson_VH.cpp  BB_LookAtPerson_VH.h  BB_LookAtSpeechSource.cpp  BB_LookAtSpeechSource.h  BB_LookAtSpeechSource_VH.cpp  BB_LookAtSpeechSource_VH.h  BB_ReactAction.cpp  BB_ReactAction.h  BB_ReactFace.cpp  BB_ReactFace.h  BB_ReactGesture.cpp  BB_ReactGesture.h  BB_ReactObject.cpp  BB_ReactObject.h  BB_ReactToSpeechSource.cpp  BB_ReactToSpeechSource.h  BB_Skype.cpp  BB_Skype.h  BB_SpeakerID.cpp  BB_SpeakerID.h  Behavior.cpp  (+26 more)
